# 01_Projekt_Denik

./: CMakeLists.txt  Denik.cpp  Kontrola_data.cpp  Kontrola_data.h  Projekt_denik.cpp  Projekt_denik.h  README.md  Tyden.cpp  Tyden.h  ZZZ_README.md  ZZZ_plan.txt
elektronicky ukolovnik/: elektronicky ukolovnik.cpp  elektronicky ukolovnik.h
elektronicky ukolovnik_oprava/: CMakeLists.txt  Denik.h  Kontrola_data.cpp  elektronicky ukolovnik.cpp
